# jupyter-ai-hermes

./: .dockerignore  README.md  pyproject.toml
jupyter_ai_hermes/: __init__.py  hermes.py  jupyter_context.py  mcp_cli.py  mcp_tools.py
tests/: test_hermes_lookup.py
